@@ -1,3 +1,10 @@
 # Ant Simulator with JavaFX
 
 Simple ant simulator that lets you grow your ant colony to greatness.
+
+
+## Note
+
+vm argument is needed to run the jar, for example,
+
+`java -jar --module-path "...\path\to\javafx-sdk-16\lib" --add-modules "javafx.controls,javafx.graphics,javafx.media,javafx.fxml" AntSimulator.jar`
